# jim-gold-game

./: CMakeLists.txt  README.md
GameObjekt/: gameobject.cpp  gameobject.h
UI/: ui.cpp  ui.h
assets/textures/: ЗЛОЙшакал.aseprite
core/: audiomanager.cpp  audiomanager.h  scenemanager.cpp  scenemanager.h
core/scene/: housescene.cpp  housescene.h  scene.h  scene2.cpp  scene2.h
entitys/Entity/: entity.cpp  entity.h
entitys/NPC/: dialoguewindow.cpp  dialoguewindow.h  npc.cpp  npc.h
entitys/Player/: player.cpp  player.h
src/: game.cpp  game.h  main.cpp
